--- a/index.html
+++ b/index.html
@@ -2,71 +2,31 @@
 <html lang="en">
 
 <head>
-  <title>Home | Rafting Inc.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/styles.css">
+  <title>CTI 230 - Assignment Portal</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-  <div id="content">
+  <div>
 
     <header><!-- HEADER SECTION -->
-      <div id="logo"><!-- logo -->
-        <img src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Flogo.png?v=1565226157594" alt="Rafting Inc. Logo">
-      </div>
-      <nav><!-- Navigation links, direction to other pages -->
-        <ul>
-          <li><a id="active-page">Home</a> |</li>
-          <li><a href="experiences.html">Experiences</a> |</li>
-          <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-      </nav>
+      <img src="images/foto.jpg">
+      <h1>Diogo Parente</h1>
     </header>
   
     <main><!-- MAIN SECTION -->
-      <div><!-- Banner Image -->
-        <img class="fullwidth" src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Fbanner1.jpg?v=1565227480637" alt="Banner | Rafting boat">
-      </div>
-    
-      <section id="row1"><!-- First Row -->
-        <div class="text-column"><!-- First Row, left column -->
-          <h2 class="color01">We run rivers to relax</h2>
-          <p class="color01">That doesn't mean we don't also like rapids. Opposites in all things after all. We believe that that tenseness that comes when you are looking down the tongue of a big string of waves makes you appreciate the calm beautiful water that always follows even more.</p>
-        </div>
-        <div class="picture-column"><!-- First Row, right column -->
-          <img class="fullwidth" src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Fimage1.jpg?v=1565228019341" alt="Relaxing environment">
-        </div>
-      </section>
-  
-      <section id="row2"><!-- Second Row -->
-        <div class="picture-column"><!-- Second Row, left column -->
-          <img class="fullwidth" src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Fimage2.jpg?v=1565228034294" alt="Beautiful Scene">
-        </div>
-        <div class="text-column"><!-- Second Row, right column -->
-          <h2 class="color02">We float the river for the beauty</h2>
-          <p class="color02">As you are floating your way down the San Rafael river be sure to enjoy all of the beauty of The Swell. Admire the grand red rocks, sparkling gypsum and spy wildlife like antelope, deer or even a mountain sheep.</p>
-        </div>
-      </section>
-  
-      <section id="row3"><!-- Third Row -->
-        <h2>Come run with us</h2>
-        <p>We invite you to come relax  with us on one of the amazing rivers we visit. Check out our trips and let us know which one best suits you. We're waiting to hear from you!</p>
-      </section>
+      <h2>CIT 230: Assignment Portal</h2>
+      <ul>
+          <li>Lesson 02: <a href="#">Assignment Link</a></li>
+          <li>Lesson 03: <a href="#">Assignment Link</a></li>
+          <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+      </ul>
     </main>
   
     <footer><!-- FOOTER SECTION -->
-      <div><!-- Footer Section, left column --> 
-        <p>&copy; 2019 Rafting Inc. - Diogo Parente</p>
-      </div>
-      <div><!-- Footer Section, right column -->
-        <!-- Social Media links -->
-        <a class="icon" href="http://www.facebook.com/" target="_blank"><img src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Ficon-facebook.png?v=1565745196873" alt="Facebook" width="40"></a>
-        <a class="icon" href="http://www.youtube.com/" target="_blank"><img src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Ficon-youtube.png?v=1565745196962" alt="Youtube" width="40"></a>
-        <a class="icon" href="http://www.pinterest.com/" target="_blank"><img src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Ficon-pinterest.png?v=1565745197099" alt="Pinterest" width="40"></a>
-        <a class="icon" href="http://www.twitter.com/" target="_blank"><img src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Ficon-twitter.png?v=1565745197268" alt="Twitter" width="40"></a>
-        <a class="icon" href="http://www.instagram.com/" target="_blank"><img src="https://cdn.glitch.com/75ed32b0-53fc-4b26-9dbb-a65af6205a6d%2Ficon-instagram.png?v=1565745197553" alt="Instagram" width="40"></a>
-      </div>
+
     </footer>
   </div>
 </body>
