--- a/index.html
+++ b/index.html
@@ -9,24 +9,31 @@
 </head>
 
 <body>
-  <div>
+  <div id="content">
 
     <header><!-- HEADER SECTION -->
-      <img src="images/foto.jpg">
-      <h1>Diogo Parente</h1>
+      <div id="logo"><!-- Foto -->
+        <img src="images/foto.jpg">
+      </div>
+      <div id="nome">
+      <h1>Diogo A. Parente</h1>
+    </div>
     </header>
-  
-    <main><!-- MAIN SECTION -->
+
+    <main>
+      <!-- MAIN SECTION -->
       <h2>CIT 230: Assignment Portal</h2>
       <ul>
-          <li>Lesson 02: <a href="#">Assignment Link</a></li>
-          <li>Lesson 03: <a href="#">Assignment Link</a></li>
-          <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
+        <li>Lesson 02: <a href="#">Assignment Link</a></li>
+        <li>Lesson 03: <a href="#">Assignment Link</a></li>
+        <li>Lesson 04: <a href="#">Link</a> | <a href="#">Link</a></li>
       </ul>
     </main>
-  
-    <footer><!-- FOOTER SECTION -->
 
+    <footer>
+      <!-- FOOTER SECTION -->
+      <p>&copy; 2019 | Diogo A. Parente | Brazil | BYU-I Online Learning</p>
+      <p>Last Updated: 09/20/2019</p>
     </footer>
   </div>
 </body>
