--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CTI 230 - Assignment Portal</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -15,9 +15,9 @@
       <div id="logo"><!-- Foto -->
         <img src="images/foto.jpg">
       </div>
-      <div id="nome">
-      <h1>Diogo A. Parente</h1>
-    </div>
+      <div id="nome"><!-- Nome, Título -->
+        <h1>Diogo A. Parente</h1>
+      </div>
     </header>
 
     <main>
