--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div id="logo"><!-- Foto -->
         <img src="images/foto.jpg">
       </div>
-      <div id="nome"><!-- Nome, Título -->
+      <div><!-- Nome, Título -->
         <h1>Diogo A. Parente</h1>
       </div>
     </header>
@@ -32,8 +32,8 @@
 
     <footer>
       <!-- FOOTER SECTION -->
-      <p>&copy; 2019 | Diogo A. Parente | Brazil | BYU-I Online Learning</p>
-      <p>Last Updated: 09/20/2019</p>
+      <p id="line1">&copy; 2019 | Diogo A. Parente | Brazil | <a href="#">BYU-I Online Learning</a></p>
+      <p id="line2">Last Updated: 09/20/2019</p>
     </footer>
   </div>
 </body>
