--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CTI 230 - Assignment Portal</title>
+  <meta name="description" content="Assignment portal for Diogo Parente in CIT 230: Web Frontend Development at Brigham Young University - Idaho">
+  <title>CIT 230 - Assignment Portal</title>
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -13,7 +14,7 @@
 
     <header><!-- HEADER SECTION -->
       <div id="logo"><!-- Foto -->
-        <img src="images/foto.jpg">
+        <img src="images/foto.jpg" alt="Picture of mine">
       </div>
       <div><!-- Nome, Título -->
         <h1>Diogo A. Parente</h1>
@@ -32,7 +33,7 @@
 
     <footer>
       <!-- FOOTER SECTION -->
-      <p id="line1">&copy; 2019 | Diogo A. Parente | Brazil | <a href="#">BYU-I Online Learning</a></p>
+      <p id="line1">&copy; 2019 | Diogo A. Parente | Brazil | <a href="https://www.byui.edu/online">BYU-I Online Learning</a></p>
       <p id="line2">Last Updated: 09/20/2019</p>
     </footer>
   </div>
