--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     content="Assignment portal for Diogo Parente in CIT 230: Web Frontend Development at Brigham Young University - Idaho">
   <title>CIT 230 - Assignment Portal</title>
   <link rel="stylesheet" href="styles/styles.css">
-  <script src="functions/dateModified.js"></script>
+  <script src="functions/dateVerify.js"></script>
 </head>
 
-<body onload="dateModified()">
+<body onload="dates()">
   <div id="content">
 
     <header>
@@ -38,9 +38,9 @@
 
     <footer>
       <!-- FOOTER SECTION -->
-      <p id="line1">&copy; 2019 | Diogo A. Parente | Brazil | <a href="https://www.byui.edu/online">BYU-I Online
+      <p id="line1">&copy; <span id="currentYear"></span> | Diogo A. Parente | Brazil | <a href="https://www.byui.edu/online">BYU-I Online
           Learning</a></p>
-      <p id="line2">Last Updated: <span id="dateModified"></span></p>
+      <p id="line2">Last updated: <span id="dateModified"></span></p>
     </footer>
   </div>
 </body>
