--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description"
     content="Assignment portal for Diogo Parente in CIT 230: Web Frontend Development at Brigham Young University - Idaho">
   <title>CIT 230 - Assignment Portal</title>
+  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="functions/dateVerify.js"></script>
 </head>
