--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>CIT 230 - Assignment Portal</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
   <script src="functions/dateVerify.js"></script>
 </head>
 
