--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Design Principles">
+  <meta name="description" content="Week 2 Assignment for CIT 230: Design Principles">
   <title>CIT 230 | Week 2 | Design Principles</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
   <link rel="stylesheet" href="styles/styles-lesson2.css">
-  <link rel="stylesheet" href="styles/middle.css">
-  <link rel="stylesheet" href="styles/small.css">
+  <link rel="stylesheet" href="styles/middle2.css">
+  <link rel="stylesheet" href="styles/small2.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
   <script src="../functions/dateVerify.js"></script>
 </head>
@@ -34,9 +34,9 @@
             <h2 class="title">Hick's Law</h2>
           </div>
           <div class="principle">
-            <p>Example from <a href="https://www.google.com.br" target="_blank">Netflix</a></p>
+            <p>Example from <a href="https://www.netflix.com" target="_blank">Netflix</a></p>
             <img class="image" src="images/Netflix.jpg" alt="Netflix platform">
-            <p class="paragraph">The Hick's Law relates the time needed by a person to choose an option based in the
+            <p class="paragraph">The <b>Hick's Law</b> relates the time needed by a person to choose an option based in the
               amount of possibilities given. When the choices increase, the time taken to decide increases
               logarithmically.</p>
             <p class="paragraph">Chosing a video (movie, series episode, cartoon) in a streaming platform like Netflix
@@ -56,7 +56,7 @@
           <div class="principle">
             <p>Example from <a href="https://www.google.com" target="_blank">Google</a></p>
             <img class="image" src="images/Google.jpg" alt="Google website">
-            <p class="paragraph">Visual hierarchy is the technique used by designers to influence users to focus on the most important information. Some of the characteristics implemented to call attention can be large pictures, bright colors, contrast, whitespace, and others.</p>
+            <p class="paragraph"><b>Visual hierarchy</b> is the technique used by designers to influence users to focus on the most important information. Some of the characteristics implemented to call attention can be large pictures, bright colors, contrast, whitespace, and others.</p>
             <p class="paragraph">Google website is a very good example of an attempt to call attention to the most important information. It has a lot of white space, low information, an a big image of its logo in the center of the page. It has only one field to type something. The user knows what are the tools to use in the site.</p>
           </div>
         </div>
@@ -70,7 +70,7 @@
           <div class="principle">
             <p>Example from <a href="https://www.scenes.com.br" target="_blank">Scenes.com.br</a></p>
             <img class="image" src="images/Pictures.jpg" alt="Scenes.com.br website">
-            <p class="paragraph">The Rule of Thirds explains that you can give more energy to your images (pictures, photos) dividing it in 9 equal parts. These 9 parts will create 3 collumns and 3 rows, separated by 2 horizontal lines and 2 vertical lines. When you position the objects in these lines, or close to them, you give more focus to your images and its details.</p>
+            <p class="paragraph">The <b>Rule of Thirds</b> explains that you can give more energy to your images (pictures, photos) dividing it in 9 equal parts. These 9 parts will create 3 collumns and 3 rows, separated by 2 horizontal lines and 2 vertical lines. When you position the objects in these lines, or close to them, you give more focus to your images and its details.</p>
             <p class="paragraph">The website Scenes.com.br, created by photographers show some pictures of various situations. In these pictures you can see imaginary lines dividing each scene in 9 parts.</p>
           </div>
         </div>
