--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
-    content="Assignment portal for Diogo Parente in CIT 230: Web Frontend Development at Brigham Young University - Idaho">
-  <title>CIT 230 - Assignment Portal</title>
+    content="Assignment Portal for Diogo Parente in CIT 230: Web Frontend Development at Brigham Young University - Idaho">
+  <title>CIT 230 | Assignment Portal</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/middle.css">
