--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -24,6 +24,7 @@
         <!-- Nome, Título -->
         <h1>Week 2 - Design Principles</h1>
       </div>
+      <span class="return"><a href="../index.html">Return</a></span>
     </header>
 
     <main>
