--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <footer>
       <!-- FOOTER SECTION -->
-      <p id="line1">&copy; <span id="currentYear"></span> | Diogo A. Parente | Brazil | <a href="https://www.byui.edu/online" target="_blank">BYU-I Online
-          Learning</a></p>
+      <p id="line1">&copy; <span id="currentYear"></span> | Diogo A. Parente | Brazil | <a
+          href="https://www.byui.edu/online" target="_blank">BYU-I Online Learning</a></p>
       <p id="line2">Last updated: <span id="dateModified"></span></p>
     </footer>
   </div>
