--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -22,7 +22,7 @@
       <!-- HEADER SECTION -->
       <div>
         <!-- Nome, Título -->
-        <h1>Week 2 - Design Principles</h1>
+        <h1>Week 3 - Website Planning</h1>
       </div>
       <span class="return"><a href="../index.html">Return</a></span>
     </header>
@@ -32,19 +32,10 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Hick's Law</h2>
+            <h2 class="title">Title</h2>
           </div>
           <div class="principle">
-            <p>Example from <a href="https://www.netflix.com" target="_blank">Netflix</a></p>
-            <img class="image" src="images/Netflix.jpg" alt="Netflix platform">
-            <p class="paragraph">The <b>Hick's Law</b> relates the time needed by a person to choose an option based in the
-              amount of possibilities given. When the choices increase, the time taken to decide increases
-              logarithmically.</p>
-            <p class="paragraph">Chosing a video (movie, series episode, cartoon) in a streaming platform like Netflix
-              can
-              take a lot of time when the user doesn't know before hand what he wants to watch. The catalog gives you
-              thousands of possible choices to choose. Even excluding the type of videos you don't like, it is common
-              wasting a lot of time looking for something interesting to watch.</p>
+            <p class="paragraph"></p>
           </div>
         </div>
       </section>
@@ -52,13 +43,10 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Visual Hierarchy</h2>
+            <h2 class="title">Title</h2>
           </div>
           <div class="principle">
-            <p>Example from <a href="https://www.google.com" target="_blank">Google</a></p>
-            <img class="image" src="images/Google.jpg" alt="Google website">
-            <p class="paragraph"><b>Visual hierarchy</b> is the technique used by designers to influence users to focus on the most important information. Some of the characteristics implemented to call attention can be large pictures, bright colors, contrast, whitespace, and others.</p>
-            <p class="paragraph">Google website is a very good example of an attempt to call attention to the most important information. It has a lot of white space, low information, an a big image of its logo in the center of the page. It has only one field to type something. The user knows what are the tools to use in the site.</p>
+            <p class="paragraph"></p>
           </div>
         </div>
       </section>
@@ -66,16 +54,14 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Rule of Thirds</h2>
+            <h2 class="title">Title</h2>
           </div>
           <div class="principle">
-            <p>Example from <a href="https://www.scenes.com.br" target="_blank">Scenes.com.br</a></p>
-            <img class="image" src="images/Pictures.jpg" alt="Scenes.com.br website">
-            <p class="paragraph">The <b>Rule of Thirds</b> explains that you can give more energy to your images (pictures, photos) dividing it in 9 equal parts. These 9 parts will create 3 collumns and 3 rows, separated by 2 horizontal lines and 2 vertical lines. When you position the objects in these lines, or close to them, you give more focus to your images and its details.</p>
-            <p class="paragraph">The website Scenes.com.br, created by photographers show some pictures of various situations. In these pictures you can see imaginary lines dividing each scene in 9 parts.</p>
+            <p class="paragraph"></p>
           </div>
         </div>
       </section>
+
     </main>
 
     <footer>
