--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -25,6 +25,7 @@
         <h1>Week 3 - Website Planning</h1>
       </div>
       <span class="return"><a href="index.html">Return</a></span>
+      <span class="next"><a href="typography.html">Next</a></span>
     </header>
 
     <main>
@@ -32,32 +33,16 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Color Scheme</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="principle-box">
-          <div>
-            <h2 class="title">Title</h2>
-          </div>
-          <div class="principle">
-            <p class="paragraph"></p>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="principle-box">
-          <div>
-            <h2 class="title">Title</h2>
-          </div>
-          <div class="principle">
-            <p class="paragraph"></p>
+              <p class="paragraph">Header: #028090</p>
+              <p class="paragraph">Primary color: white</p>
+              <p class="paragraph">Secondary color: #e1e8f7</p>
+              <p class="paragraph">Headings: white</p>
+              <p class="paragraph">Paragraphs: black</p>
+            <p class="paragraph">Footer: #028090</p>
+            <img src="images/colors.png" alt="Color Pallete"
           </div>
         </div>
       </section>
