--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -25,17 +25,18 @@
         <h1>Week 3 - Website Planning</h1>
       </div>
       <span class="return"><a href="../index.html">Return</a></span>
+      <span class="next"><a href="target-audience.html">Next</a></span>
     </header>
 
-    <main>
+    <main>      
       <!-- MAIN SECTION -->
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Site Name</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
+            <p class="paragraph">This website will be called <b>The Weather for You</b>. The website will be a source of information about the weather condition in the areas listed.</p>
           </div>
         </div>
       </section>
@@ -43,10 +44,11 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Site Purpose</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
+            <p class="paragraph">The main purpose of the TheWeather4You.com website is to notify its users about the weather condition in the locations of <b>Preston</b>, <b>Soda Springs</b>, and <b>Fish Haven</b>. The weather forecast will be given for the current and next few days.</p>
+            <p class="paragraph">The information displayed will be the temperature, sun and clouds condition, wind speed and direction, rain or snow precipitation, and any important alert.</p>
           </div>
         </div>
       </section>
@@ -54,14 +56,26 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Domain Name</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
+            <p class="paragraph">The domain for the <b>"The Weather for You"</b> website will be <b>www.theweather4you.com</b>.</p>
+            <p class="paragraph">The price to keep this domain active is <b>$ 12,00 per year</b>.</p>
           </div>
         </div>
       </section>
 
+      <section>
+          <div class="principle-box">
+            <div>
+              <h2 class="title">Logo</h2>
+            </div>
+            <div class="principle">
+              <img class="image" src="images/logo_weather.png" alt="Website logo">
+            </div>
+          </div>
+        </section>
+  
     </main>
 
     <footer>
