--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -25,6 +25,7 @@
         <h1>Week 3 - Website Planning</h1>
       </div>
       <span class="return"><a href="index.html">Return</a></span>
+      <span class="next"><a href="color-scheme.html">Next</a></span>
     </header>
 
     <main>
@@ -32,7 +33,23 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Audience</h2>
+          </div>
+          <div class="principle">
+            <p class="paragraph">The target audience of the website is:</p>
+            <ul>
+              <li><b>Who:</b> Any person living or not in the cities the website is related to. People planning to visit any of these cities.</li>
+              <li><b>Device:</b> Any device, can be a cellphone, tablet, or a computer.</li>
+              <li><b>Motivation:</b> Know the time to do an activity, what clothes to use, take an umbrella or not when living home, plan to go outside or stay at home.</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="principle-box">
+          <div>
+            <h2 class="title">Persona 1</h2>
           </div>
           <div class="principle">
             <p class="paragraph"></p>
@@ -43,7 +60,7 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Persona 2</h2>
           </div>
           <div class="principle">
             <p class="paragraph"></p>
@@ -54,10 +71,18 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Scenarios</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
+            <ul>
+              <li>Will it rain tomorrow?</li>
+              <li>Do I need to carry my umbrella today?</li>
+              <li>What will be the minimun and maximun temperatures for this afternoon.</li>
+              <li>Will it be sunny at the beach?</li>
+              <li>Is there any alert for a bad weather situation?</li>
+              <li>How will be the weather next weekend?</li>
+              <li>Should I carry an additional jacket today?</li>
+            </ul>
           </div>
         </div>
       </section>
