--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <title>CIT 230 | Assignment Portal</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="stylesheet" href="styles/middle.css">
   <link rel="stylesheet" href="styles/small.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/medium.css">
+  <link rel="stylesheet" href="styles/large.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="functions/dateVerify.js"></script>
 </head>
 
