--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -8,10 +8,10 @@
   <title>CIT 230 | Week 3 | Website Planning - Color Scheme</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="styles/normal3.css">
-  <link rel="stylesheet" href="styles/middle3.css">
+  <link rel="stylesheet" href="styles/large3.css">
+  <link rel="stylesheet" href="styles/medium3.css">
   <link rel="stylesheet" href="styles/small3.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="../functions/dateVerify.js"></script>
 </head>
 
@@ -36,13 +36,13 @@
             <h2 class="title">Color Scheme</h2>
           </div>
           <div class="principle">
-              <p class="paragraph">Header: #028090</p>
-              <p class="paragraph">Primary color: white</p>
-              <p class="paragraph">Secondary color: #e1e8f7</p>
-              <p class="paragraph">Headings: white</p>
-              <p class="paragraph">Paragraphs: black</p>
-            <p class="paragraph">Footer: #028090</p>
-            <img src="images/colors.png" alt="Color Pallete"
+              <p class="paragraph">Header: #028090 (Metallic Seaweed)</p>
+              <p class="paragraph">Primary color: #ffffff (White)</p>
+              <p class="paragraph">Secondary color: #e1e8f7 (Glitter)</p>
+              <p class="paragraph">Headings: #ffffff (White)</p>
+              <p class="paragraph">Paragraphs: #000000 (Black)</p>
+            <p class="paragraph">Footer: #028090 (Metallic Seaweed)</p>
+            <img class="image2" src="images/colors.png" alt="Color Pallete">
           </div>
         </div>
       </section>
