--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,10 +8,10 @@
   <title>CIT 230 | Week 3 | Website Planning</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="styles/normal3.css">
-  <link rel="stylesheet" href="styles/middle3.css">
+  <link rel="stylesheet" href="styles/large3.css">
+  <link rel="stylesheet" href="styles/medium3.css">
   <link rel="stylesheet" href="styles/small3.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="../functions/dateVerify.js"></script>
 </head>
 
@@ -47,7 +47,8 @@
             <h2 class="title">Site Purpose</h2>
           </div>
           <div class="principle">
-            <p class="paragraph">The main purpose of the TheWeather4You.com website is to notify its users about the weather condition in the locations of <b>Preston</b>, <b>Soda Springs</b>, and <b>Fish Haven</b>. The weather forecast will be given for the current and next few days.</p>
+            <p class="paragraph">The main purpose of the TheWeather4You.com website is to notify its users about the weather condition in the locations of <b>Preston</b>, <b>Soda Springs</b>, and <b>Fish Haven</b>.</p>
+            <p class="paragraph">The weather forecast will be given for the current and next few days.</p>
             <p class="paragraph">The information displayed will be the temperature, sun and clouds condition, wind speed and direction, rain or snow precipitation, and any important alert.</p>
           </div>
         </div>
