--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -8,10 +8,10 @@
   <title>CIT 230 | Week 3 | Website Planning - Target Audience</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="styles/normal3.css">
-  <link rel="stylesheet" href="styles/middle3.css">
+  <link rel="stylesheet" href="styles/large3.css">
+  <link rel="stylesheet" href="styles/medium3.css">
   <link rel="stylesheet" href="styles/small3.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="../functions/dateVerify.js"></script>
 </head>
 
@@ -38,9 +38,11 @@
           <div class="principle">
             <p class="paragraph">The target audience of the website is:</p>
             <ul>
-              <li><b>Who:</b> Any person living or not in the cities the website is related to. People planning to visit any of these cities.</li>
+              <li><b>Who:</b> Any person living or not in the cities the website is related to. People planning to visit
+                any of these cities.</li>
               <li><b>Device:</b> Any device, can be a cellphone, tablet, or a computer.</li>
-              <li><b>Motivation:</b> Know the time to do an activity, what clothes to use, take an umbrella or not when living home, plan to go outside or stay at home.</li>
+              <li><b>Motivation:</b> Know the time to do an activity, what clothes to use, take an umbrella or not when
+                leaving home, plan to go outside or stay at home.</li>
             </ul>
           </div>
         </div>
@@ -52,7 +54,15 @@
             <h2 class="title">Persona 1</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
+            <img class="image" src="images/boy17.jpg" alt="John Silva picture">
+            <p class="paragraph">John Silva</p>
+            <p class="paragraph"><b>Personal information:</b> 17 years old. High School student, studying Economics.</p>
+            <p class="paragraph"><b>Reason to use the website:</b> Plan his daily activities, like going to his
+              internship and High School course.</p>
+            <p class="paragraph"><b>Professional:</b> Few months as an internship in an office.</p>
+            <p class="paragraph"><b>Devices usage:</b> Smartphone, tablet, smartwatch, desktop computer at school, and a
+              personal computer. All of them with internet access.</p>
+
           </div>
         </div>
       </section>
@@ -63,7 +73,15 @@
             <h2 class="title">Persona 2</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
+            <img class="image" src="images/woman73.jpg" alt="May Soares picture">
+            <p class="paragraph">May Soares</p>
+            <p class="paragraph"><b>Personal information:</b> 73 years old. Retired, worked for a local industry during
+              her entire life.</p>
+            <p class="paragraph"><b>Reason to use the website:</b> Know the current weather conditions to plan her daily
+              activities</p>
+            <p class="paragraph"><b>Professional:</b> Many diferent activities, like cleaning, gardening, buying
+              supplies.</p>
+            <p class="paragraph"><b>Devices usage:</b> Has access to the internet using a computer at home.</p>
           </div>
         </div>
       </section>
