--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -8,10 +8,10 @@
   <title>CIT 230 | Week 2 | Design Principles</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="styles/styles-lesson2.css">
-  <link rel="stylesheet" href="styles/middle2.css">
+  <link rel="stylesheet" href="styles/large2.css">
+  <link rel="stylesheet" href="styles/medium2.css">
   <link rel="stylesheet" href="styles/small2.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="../functions/dateVerify.js"></script>
 </head>
 
