--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -8,10 +8,10 @@
   <title>CIT 230 | Week 3 | Website Planning - Typography</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/styles.css">
-  <link rel="stylesheet" href="styles/normal3.css">
-  <link rel="stylesheet" href="styles/middle3.css">
+  <link rel="stylesheet" href="styles/large3.css">
+  <link rel="stylesheet" href="styles/medium3.css">
   <link rel="stylesheet" href="styles/small3.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="../functions/dateVerify.js"></script>
 </head>
 
@@ -32,36 +32,14 @@
       <section>
         <div class="principle-box">
           <div>
-            <h2 class="title">Title</h2>
+            <h2 class="title">Typography</h2>
           </div>
           <div class="principle">
             <p class="paragraph"></p>
           </div>
         </div>
       </section>
-
-      <section>
-        <div class="principle-box">
-          <div>
-            <h2 class="title">Title</h2>
-          </div>
-          <div class="principle">
-            <p class="paragraph"></p>
-          </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="principle-box">
-          <div>
-            <h2 class="title">Title</h2>
-          </div>
-          <div class="principle">
-            <p class="paragraph"></p>
-          </div>
-        </div>
-      </section>
-
+      
     </main>
 
     <footer>
