--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -24,8 +24,16 @@
         <!-- Nome, Título -->
         <h1>Week 3 - Website Planning</h1>
       </div>
-      <span class="return"><a href="index.html">Return</a></span>
-      <span class="next"><a href="typography.html">Next</a></span>
+      <span class="return"><a href="../index.html">Return</a></span>
+      
+      <nav><!-- Navigation links, direction to other pages -->
+        <ul>
+          <li><a href="index.html">Home</a> |</li>
+          <li><a href="target-audience.html">Audience</a> |</li>
+          <li><a id="active-page">Colors</a> |</li>
+          <li><a href="typography.html">Typography</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
