--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -25,7 +25,15 @@
         <h1>Week 3 - Website Planning</h1>
       </div>
       <span class="return"><a href="../index.html">Return</a></span>
-      <span class="next"><a href="target-audience.html">Next</a></span>
+      
+      <nav><!-- Navigation links, direction to other pages -->
+        <ul>
+          <li><a id="active-page">Home</a> |</li>
+          <li><a href="target-audience.html">Audience</a> |</li>
+          <li><a href="color-scheme.html">Colors</a> |</li>
+          <li><a href="typography.html">Typography</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>      
