--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -24,7 +24,17 @@
         <!-- Nome, Título -->
         <h1>Week 3 - Website Planning</h1>
       </div>
-      <span class="return"><a href="index.html">Return</a></span>
+      <span class="return"><a href="../index.html">Return</a></span>
+
+      <nav>
+        <!-- Navigation links, direction to other pages -->
+        <ul>
+          <li><a href="index.html">Home</a> |</li>
+          <li><a href="target-audience.html">Audience</a> |</li>
+          <li><a href="color-scheme.html">Colors</a> |</li>
+          <li><a id="active-page">Typography</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -35,11 +45,17 @@
             <h2 class="title">Typography</h2>
           </div>
           <div class="principle">
-            <p class="paragraph"></p>
+            <p class="paragraph">All sections are using the following fonts:</p>
+            <ol>
+              <li>Arial</li>
+              <li>Comic Sans MS</li>
+              <li>Sans Serif</li>
+            </ol>            
+            <p class="paragraph">The font size may vary depending on the content displayed and the screen size of the device used by the user.</p>
           </div>
         </div>
       </section>
-      
+
     </main>
 
     <footer>
