--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="styles/small3.css">
   <link href="https://fonts.googleapis.com/css?family=Lato%7cLobster&display=swap" rel="stylesheet">
   <script src="../functions/dateVerify.js"></script>
+  <script src="../functions/Menu.js"></script>
 </head>
 
 <body onload="dates()">
@@ -28,10 +29,11 @@
 
       <nav>
         <!-- Navigation links, direction to other pages -->
-        <ul>
-          <li><a href="index.html">Home</a> |</li>
-          <li><a href="target-audience.html">Audience</a> |</li>
-          <li><a href="color-scheme.html">Colors</a> |</li>
+        <button onclick="toggleMenu()">&#9776 Menu</button>
+        <ul id="pageOptions" class="hide">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="target-audience.html">Audience</a></li>
+          <li><a href="color-scheme.html">Colors</a></li>
           <li><a id="active-page">Typography</a></li>
         </ul>
       </nav>
